@@ -1,4 +1,4 @@
-7bcd3af09bb8bc416591192cf169a705 *DESCRIPTION
+c0bb1edd01e86ba0cba5532eabfc7452 *DESCRIPTION
 ed5cc1380a6c05d376b5df113c24ea9b *NAMESPACE
 5986e6402724232d4b66a8f2cd6af77b *NEWS
 b36ac435e05cae710372bdb74c8c3293 *R/BaumWelch.R
@@ -80,7 +80,7 @@ a5670e6a8b4712b60b8ee8268f764b25 *R/summary.mmglm1.R
 3f1b9c5d8e2272780ad40a417b578fa8 *R/summary.mmpp.R
 864fc25551cf9cd206d1cbe2f081daec *R/vector2Pi.R
 befe46c5ea55a55167939fdb2c8901c5 *R/vector2Q.R
-e71d08ef99d2de1a42faa0447e6a8fd3 *build/partial.rdb
+8ad672222f02cef80668525b381b0fc1 *build/partial.rdb
 64d3eb2498905f047b07d4b32dfd7e5c *demo/00Index
 f1975359a0e73f39fb3f064c9ce5033b *demo/beta.R
 901c94928a6e4cc0a5c587537fa44cce *demo/gamma.R
@@ -88,16 +88,16 @@ bfee2e728683d14aba32abdbcd7c0883 *demo/lnorm.R
 890f3cd71b860f6a19233c5cbfc37f22 *demo/logis.R
 0f808acf3f40e8df57d84906e9c816e4 *demo/norm.R
 78dbf968c06379f63ec270565efeda51 *inst/CITATION
-bcc366573fdf2bf6c56206867a329801 *inst/doc/index.html
+efff4eb5b4f4637f9efeaeb6d930a537 *inst/doc/index.html
 8ab978754ea52dcae4b87e0ade8f9b95 *man/BaumWelch.Rd
-c551df2e894abac61f246b4d8a76794a *man/Changes.Rd
+cb62b04281c8bf034cd19e0c1a0d5476 *man/Changes.Rd
 69e9392ae7ec514b115a4e47c83abeb3 *man/Demonstration.Rd
 e055514980070bfeab459d960eb967bc *man/Estep.Rd
 259d9b8830abf98c98c091b2e8168bf1 *man/HiddenMarkov-defunct.Rd
 1279c1a0ad1f56c1e1b1716a05b2abb7 *man/HiddenMarkov-dthmm-deprecated.Rd
 46a03a92b90e340e4607892fd48f7fe1 *man/HiddenMarkov-internal.Rd
 e84d3bb4d8054b3c8915fd08d7d60d17 *man/HiddenMarkov-mmpp-deprecated.Rd
-2d6eeef3182f40cb67c3caf17970dec1 *man/HiddenMarkov.Rd
+850768aaf4b0140ee10149f6a3a24f91 *man/HiddenMarkov.Rd
 562a49d4cfaff3a1271f9d9a624cbb71 *man/Mstep.Rd
 9b37b4a7908d9847db12329392142b48 *man/Transform-Parameters.Rd
 b6f9419a7482efb2433a30494cf7f5e5 *man/Viterbi.Rd
