@@ -11,11 +11,11 @@
 </head>
 
 <body>
-<h2>Vignettes of Package HiddenMarkov </h2>
+<h2>Information on Package HiddenMarkov </h2>
 
 <dl>
-<dt><a href="../DESCRIPTION">Brief Description</a>:
-<dd> Package Description File
+<dt><a href="../DESCRIPTION">Brief Technical Description</a>:
+<dd> Package DESCRIPTION File
 </dl>
 
 <dl>
@@ -24,8 +24,13 @@
 </dl>
 
 <dl>
-<dt><a href="https://cran.r-project.org/package=HiddenMarkov/HiddenMarkov.pdf">PDF Manual</a>:
+<dt><a href="https://cran.r-project.org/package=HiddenMarkov/HiddenMarkov.pdf">HiddenMarkov.pdf</a>:
 <dd> PDF Version of Reference Manual
+</dl>
+
+<dl>
+<dt><a href="../html/Demonstration.html">Demo</a>:
+<dd> Demonstration Examples
 </dl>
 
 <dl>
@@ -34,13 +39,8 @@
 </dl>
 
 <dl>
-<dt><a href="ftp://ftp.gns.cri.nz/pub/davidh/sslib/other/notes.pdf" target="new">notes.pdf</a>:
+<dt><a href="https://www.statsresearch.co.nz/dsh/sslib/manuals/notes.pdf" target="new">notes.pdf</a>:
 <dd> Mathematical Background Notes
-</dl>
-
-<dl>
-<dt><a href="../html/Demonstration.html">Demo</a>:
-<dd> Demonstration Examples
 </dl>
 
 <dl>
@@ -56,7 +56,7 @@
 </dl>
 
 <dl>
-<dt><a href="http://www.statsresearch.co.nz/dsh/sslib/" target="new">SSLib</a>:
+<dt><a href="https://www.statsresearch.co.nz/dsh/sslib/" target="new">SSLib</a>:
 <dd> Statistical Seismology Library (SSLib) Web Page
 </dl>
 
